@@ -1,5 +1,7 @@
 package com.wuguangxin.utils;
 
+import java.lang.reflect.ParameterizedType;
+
 /**
  * 对象非null判断
  * Created by wuguangxin on 17/5/18.
@@ -20,7 +22,7 @@ public class Null {
     }
 
     /**
-     * 判断对象是否为null，为null的话创建一个clazz对象返回
+     * 判断对象是否为null，为null的话尝试创建一个Clazz<T>类型对象返回
      * @param obj 对象
      * @param clazz 默认返回的类
      * @param <T> 对象为泛型类
@@ -29,8 +31,21 @@ public class Null {
     public static <T> T check(T obj, Class<T> clazz) {
         if (obj == null && clazz != null) {
             try {
-//                return (T) ((ParameterizedType) clazz.getGenericSuperclass()).getActualTypeArguments()[0];
-                return (T) clazz.newInstance();
+                // 关于反射调用构造器：https://blog.csdn.net/newbie0107/article/details/89763398
+
+                // 该反射只能反射无参公有构造函数
+                T result = clazz.newInstance();
+
+                if (result == null) {
+                    //利用Constructor.newInstance()反射无参构造方法
+                    result = clazz.getDeclaredConstructor().newInstance();
+                }
+
+                if (result == null) {
+                    result = (T) ((ParameterizedType) clazz.getGenericSuperclass()).getActualTypeArguments()[0];
+                }
+
+                return result;
             } catch (Exception e) {
                 e.printStackTrace();
             }
